--- a/image_classification/atac/notebook/ATAC.ipynb
+++ b/image_classification/atac/notebook/ATAC.ipynb
@@ -46,7 +46,7 @@
     "train_dataloader = torch.utils.data.DataLoader(trainset, batch_size=64,\n",
     "                                          shuffle=True, num_workers=4)\n",
     "\n",
-    "testset = torchvision.datasets.CIFAR10(root='./data/input', train=False,\n",
+    "testset = torchvision.datasets.CIFAR10(root='../data/input', train=False,\n",
     "                                       download=True, transform=transform)\n",
     "test_dataloader = torch.utils.data.DataLoader(testset, batch_size=64,\n",
     "                                         shuffle=False, num_workers=4)\n",
